# Kasane

./: .gitignore  .gitmodules  02c_PARTIAL_W0B0_1782174527.json  02c_PARTIAL_W1B1_1782173764.json  02c_PARTIAL_W2B2_1782174645.json  02c_PARTIAL_W3B3_1782173748.json  03_PARTIAL_W2B2_1782175119.json  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SUMMARY.md  canbench.yml  canbench_results.yml  cargo-metadata.sbom.json  deny.toml  dfx.json  icp.yaml  vendor-ark-relations.sha256  vendor-revm.sha256  whitepaper.md
.github/workflows/: ci.yml  pages-mdbook.yml  rpc-gateway-mirror.yml
contracts/: README.md  WrapTokenFactory.sol  WrappedAssetToken.sol  foundry.toml
contracts/test/: WrapTokenFactory.t.sol
crates/evm-canister/: Cargo.toml  evm_canister.did
crates/evm-canister/src/: lib.rs
crates/evm-core/: Cargo.toml
crates/evm-core/src/: base_fee.rs  base_fee_tests.rs  bytes.rs  chain.rs  chain_tests.rs  commit.rs  constants.rs  db_adapter.rs  export.rs  hash.rs  kasane_precompiles.rs  kasane_precompiles_tests.rs  lib.rs  revm_db.rs  revm_exec.rs  revm_exec_tests.rs  selfdestruct.rs  state_root.rs  state_root_tests.rs  time.rs  tx_decode.rs  tx_decode_deposit.rs  tx_decode_tests.rs  tx_recovery.rs  tx_submit.rs  wrap_precompile.rs  wrap_precompile_tests.rs
crates/evm-core/src/state_root/: node_codec.rs  node_store.rs  node_store_tests.rs  trie_update.rs
crates/evm-core/src/test_bin/: caller_evm.rs  derive_evm_address.rs  eth_raw_tx.rs
crates/evm-core/tests/: corrupt_localization.rs  dropped_ring.rs  export_api.rs  internal_trace_execution.rs  kasane_precompiles_query.rs  native_deposit_credit.rs  phase1_blockhash_window.rs  phase1_chain_behavior.rs  phase1_dev_mint.rs  phase1_eth_decode.rs  phase1_fee_ordering.rs  phase1_fee_rules.rs  phase1_halt_mapping.rs  phase1_hash.rs  phase1_ic_decode.rs  phase1_l1_fee_context.rs  phase1_l1blockinfo_storage_update.rs  phase1_nonce_sequence.rs  phase1_produce_block_drop.rs  phase1_prune.rs  phase1_queue_caps.rs  phase1_revm_db.rs  phase1_runtime_indexes.rs  phase1_storage_trap_rollback.rs  phase1_system_tx_backoff.rs  phase1_system_tx_injection.rs  phase1_tx_in.rs  pr0_snapshots.rs  prune_journal.rs  prune_policy.rs  prune_triggers.rs  state_root_migration.rs  tx_locs_migration.rs  tx_recovery_isolation.rs  wrap_precompile_query.rs
crates/evm-core/tests/common/: mod.rs
crates/evm-db/: Cargo.toml
crates/evm-db/fuzz/: Cargo.toml
crates/evm-db/fuzz/fuzz_targets/: key_wire_decode.rs  state_root_from_bytes.rs  tx_loc_from_bytes.rs
crates/evm-db/src/: blob_ptr.rs  blob_store.rs  corrupt_log.rs  decode.rs  lib.rs  memory.rs  meta.rs  overlay.rs  size_class.rs  stable_state.rs  upgrade.rs
crates/evm-db/src/chain_data/: block.rs  caller.rs  chain_state.rs  codec.rs  constants.rs  dropped_ring.rs  icp_update_request.rs  internal_trace.rs  l1_block_info.rs  log_config.rs  metrics.rs  mod.rs  native_credit.rs  ops.rs  ops_metrics.rs  ordering.rs  prune_config.rs  prune_state.rs  queue.rs  receipt.rs  runtime_config.rs  runtime_defaults.rs  state_root_meta.rs  state_root_ops.rs  system_tx_health.rs  tx.rs  tx_loc.rs  unwrap_request.rs  wrap_request.rs
crates/evm-db/src/phase1/: block.rs  constants.rs  mod.rs  queue.rs  receipt.rs  tx.rs
crates/evm-db/src/types/: keys.rs  storable.rs  values.rs
crates/evm-db/tests/: blob_store_roundtrip.rs  chain_data_memory_layout.rs  chain_data_proptest.rs  chain_data_storable.rs  phase0_memory_layout.rs  phase0_meta_ops.rs  phase0_ordering.rs  phase0_stable_state.rs  phase0_storable.rs  phase0_upgrade.rs  phase1_memory_layout.rs  phase1_storable.rs  unwrap_request_corruption_integration.rs
crates/evm-rpc-e2e/: Cargo.toml
crates/evm-rpc-e2e/tests/: precompile_profile_e2e.rs  rpc_compat_e2e.rs  unwrap_recovery_e2e.rs  wrap_unwrap_flow_e2e.rs
crates/ic-evm-address/: Cargo.toml
crates/ic-evm-address/src/: lib.rs
crates/ic-evm-gateway/: Cargo.toml  evm_canister.did  evm_canister_precompile_profile_admin.did
crates/ic-evm-metrics/: Cargo.toml
crates/ic-evm-ops/: Cargo.toml
crates/ic-evm-rpc/: Cargo.toml
crates/ic-evm-rpc-types/: Cargo.toml
crates/ic-evm-rpc/src/: lib.rs
crates/ic-evm-rpc/tests/: rpc_query_microbench.rs  rpc_runtime_paths.rs
crates/ic-evm-tx/: Cargo.toml
crates/ic-evm-tx/src/: lib.rs
crates/ic-evm-wrapper/: Cargo.toml  evm_canister.did
crates/ic-evm-wrapper/src/: canbench_benches.rs  lib.rs  prometheus_metrics.rs
docs/: data_tx_id.md  lightpaper.md  phase1.1.md  phase1.2.md  phase1.3.md  phase1.4.md  phase1.5.md  phase1.md  phase2.1.md  phase2.2.md  phase2.3.md  phase2.md  phase3.md  phase4.md  phase5.md  plan.md
othercanisters/mock-wrap-canister/: Cargo.toml
othercanisters/mock-wrap-canister/src/: lib.rs
othercanisters/wrap-canister/: Cargo.toml  LICENSE  wrap_canister.did
othercanisters/wrap-canister/src/: icrc21.rs  lib.rs  tests.rs
outputs/: BUG_BOUNTY_SCOPE.json  TARGET_INFO.json
scripts/: README.ja.md  README.md  blockscout_local_validate.sh  build_wasm_postprocess.sh  check_alloy_isolation.sh  check_canbench_thresholds.sh  check_did_sync.sh  check_gateway_api_compat_baseline.sh  check_gateway_matrix_sync.sh  check_getrandom_wasm_features.sh  check_hidden_unicode.sh  check_icp_query_precompile_verification.sh  check_legacy_rpc_removed.sh  check_precompile_feature_isolation.sh  check_rng_paths.sh  check_verification_policy.sh  ci-local.sh  ci_github_equivalent.sh  clean_local_artifacts.sh  dfx_local_clean_start.sh  ic_mainnet_deploy.sh  ic_mainnet_preflight.sh  icp_local_clean_start.sh  indexer_env_sanity_check.sh  indexer_metrics_snapshot.sh  indexer_reset_local_state.sh  indexer_retention_report.sh  indexer_retention_run.sh  lib_candid_result.sh  lib_init_args.sh  lib_ledger_artifact.sh  lib_legacy_wrap_drain.sh  local_indexer_fault_injection.sh  local_indexer_smoke.sh  local_pruning_stage.sh  local_wrap_unwrap_ledger_smoke.sh  measure_precompile_ratio.sh  playground_manual_deploy.sh  playground_smoke.sh  pr0_capture_local_snapshot.sh  (+20 more)
spec/: adapter-evidence.toml  targets.toml
tmp/: 02c_PARTIAL_W2B2_1782173673.json
(+1082 files in other folders)
