[workspace]
members = [
    "crates/evm-db",
    "crates/evm-core",
    "crates/evm-canister"
]
exclude = [
    "vendor/stable-structures"
    ,"vendor/revm"
    ,"crates/evm-rpc-e2e"
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
debug = false

[patch.crates-io]
ark-relations = { path = "vendor/ark-relations" }
