[workspace]
members = [
    "crates/ic-evm-address",
    "crates/evm-db",
    "crates/ic-evm-tx",
    "crates/evm-core",
    "crates/ic-evm-wrapper",
    "crates/ic-evm-rpc-types",
    "crates/ic-evm-metrics",
    "crates/ic-evm-ops",
    "crates/ic-evm-rpc"
]
exclude = [
    "vendor/revm"
    ,"crates/evm-rpc-e2e"
]
resolver = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
debug = false

[patch.crates-io]
ark-relations = { path = "vendor/ark-relations" }
alloy-consensus = { path = "vendor/alloy-consensus" }
keccak = { path = "vendor/keccak" }
