[package]
name = "evm-canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18"
serde = { version = "1", features = ["derive"] }

[dependencies.evm-core]
path = "../evm-core"

[dependencies.evm_db]
package = "evm-db"
path = "../evm-db"
