[package]
name = "ic-evm-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "evm_core"
crate-type = ["rlib"]

[[bin]]
name = "caller_evm"
path = "src/test_bin/caller_evm.rs"

[[bin]]
name = "eth_raw_tx"
path = "src/test_bin/eth_raw_tx.rs"
required-features = ["local-signer-bin"]

[dependencies]
tiny-keccak = { version = "2", features = ["keccak"] }
ic-cdk = "0.19.0"
ic-stable-structures = "0.7.2"
revm = { path = "../../vendor/revm/crates/revm", default-features = false, features = ["std"] }
alloy-rlp = "0.3"
alloy-primitives = { version = "1.5.2", default-features = false, features = ["std", "rlp"] }
alloy-eips = { version = "1.5.2", default-features = false, features = ["std", "k256"] }
alloy-consensus = { version = "1.5.2", default-features = false, features = ["std", "k256"] }
alloy-trie = { version = "0.9.3", default-features = false, features = ["std", "ethereum"] }
op-revm = { path = "../../vendor/revm/crates/op-revm", default-features = false, features = ["std"] }
alloy-signer = { version = "1.5.2", default-features = false, optional = true }
alloy-signer-local = { version = "1.5.2", default-features = false, optional = true }

[dependencies.evm_db]
package = "evm-db"
path = "../evm-db"

[features]
full_state_root = []
local-signer-bin = ["dep:alloy-signer", "dep:alloy-signer-local"]

[dev-dependencies]
alloy-signer = { version = "1.5.2", default-features = false }
alloy-signer-local = { version = "1.5.2", default-features = false }
