[package]
name = "ic-evm-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "evm_core"
crate-type = ["rlib"]

[[bin]]
name = "caller_evm"
path = "src/test_bin/caller_evm.rs"

[[bin]]
name = "eth_raw_tx"
path = "src/test_bin/eth_raw_tx.rs"
required-features = ["local-signer-bin"]

[dependencies]
candid = "0.10"
hex = "0.4"
ic-cdk = "0.19.0"
revm = { path = "../../vendor/revm/crates/revm", default-features = false, features = ["std"] }
alloy-rlp = { version = "0.3", default-features = false }
alloy-primitives = { version = "=1.5.3", default-features = false, features = ["rlp"] }
alloy-eips = { version = "1.5.2", default-features = false }
alloy-trie = { version = "0.9.3", default-features = false, features = ["ethereum"] }
alloy-signer = { version = "1.5.2", default-features = false, optional = true }
alloy-signer-local = { version = "1.5.2", default-features = false, optional = true }
byteorder = "1"
smallvec = "1.13"

[dependencies.evm_db]
package = "evm-db"
path = "../evm-db"

[dependencies.evm_tx]
package = "ic-evm-tx"
path = "../ic-evm-tx"

[features]
full_state_root = []
local-signer-bin = ["dep:alloy-signer", "dep:alloy-signer-local"]

[dev-dependencies]
alloy-consensus = { version = "1.5.2", default-features = false, features = ["k256"] }
alloy-eips = { version = "1.5.2", default-features = false }
alloy-signer = { version = "1.5.2", default-features = false }
alloy-signer-local = { version = "1.5.2", default-features = false }
