[package]
name = "evm-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0" # Keep in sync with ic-evm-wrapper to avoid links conflicts
ic-stable-structures = "0.7.2"
tiny-keccak = { version = "2.0", features = ["keccak"] }
alloy-primitives = { version = "1.5.2", default-features = false, features = ["std"] }
