[package]
name = "evm-rpc-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.10"
pocket-ic = "12.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
evm_core = { package = "ic-evm-core", path = "../evm-core" }
tiny-keccak = { version = "2", features = ["keccak"] }

[patch.crates-io]
ark-relations = { path = "../../vendor/ark-relations" }
