[package]
name = "ic-evm-address"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "ic_evm_address"
crate-type = ["rlib"]

[dependencies]
alloy-primitives = { version = "=1.5.3", default-features = false, features = ["std"] }
ic-pub-key = { version = "0.3.0", default-features = false, features = ["secp256k1"] }
ic-secp256k1 = "0.3.0"

[dev-dependencies]
candid = "0.10"
hex = "0.4"
