[package]
name = "ic-evm-rpc"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ic-evm-rpc-types = { path = "../ic-evm-rpc-types" }
evm_core = { package = "ic-evm-core", path = "../evm-core" }
evm-db = { path = "../evm-db" }
tracing = "0.1"

[dev-dependencies]
alloy-consensus = { version = "1.5.2", default-features = false, features = ["k256", "eips-kzg-sidecar"] }
alloy-eips = { version = "1.5.2", default-features = false, features = ["kzg-sidecar"] }
alloy-primitives = { version = "=1.5.3", default-features = false, features = ["std"] }
alloy-signer = { version = "1.5.2", default-features = false }
alloy-signer-local = { version = "1.5.2", default-features = false }
