[package]
name = "ic-evm-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
dev-faucet = []

[dependencies]
candid = "0.10"
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", features = ["custom"] }

[dependencies.evm-core]
package = "ic-evm-core"
path = "../evm-core"

[dependencies.evm_db]
package = "evm-db"
path = "../evm-db"
