[package]
name = "ic-evm-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
dev-faucet = []
did-gen = []
canbench-rs = ["dep:canbench-rs"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
serde = { version = "1", features = ["derive"] }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json", "env-filter"] }
ic-metrics-encoder = "1.1.1"
canbench-rs = { version = "0.4.0", optional = true }

[dependencies.evm-core]
package = "ic-evm-core"
path = "../evm-core"

[dependencies.evm_db]
package = "evm-db"
path = "../evm-db"

[[bin]]
name = "export_did"
path = "src/bin/export_did.rs"
required-features = ["did-gen"]
