[package]
name = "mock-wrap-canister"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.19.0"
serde = { version = "1", features = ["derive"] }
ic_evm_rpc_types = { package = "ic-evm-rpc-types", path = "../../crates/ic-evm-rpc-types" }
