[package]
name = "wrap-canister"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-stable-structures = "0.7.2"
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
tiny-keccak = { version = "2", features = ["keccak"] }
ic_evm_address = { package = "ic-evm-address", version = "0.1.0", path = "../../crates/ic-evm-address" }
ic_evm_rpc_types = { package = "ic-evm-rpc-types", version = "0.1.0", path = "../../crates/ic-evm-rpc-types" }
